RESOLVED FIXED144548
[Mac] Show wireless playback placard even when an element has custom controls
https://bugs.webkit.org/show_bug.cgi?id=144548
Summary [Mac] Show wireless playback placard even when an element has custom controls
Eric Carlson
Reported 2015-05-03 09:17:08 PDT
Show wireless playback placard even when an element has custom controls
Attachments
Proposed patch. (5.70 KB, patch)
2015-05-03 09:33 PDT, Eric Carlson
buildbot: commit-queue-
Archive of layout-test-results from ews101 for mac-mavericks (700.59 KB, application/zip)
2015-05-03 09:50 PDT, Build Bot
no flags
Updated patch. (5.74 KB, text/plain)
2015-05-03 10:29 PDT, Eric Carlson
buildbot: commit-queue-
Archive of layout-test-results from ews106 for mac-mavericks-wk2 (718.17 KB, application/zip)
2015-05-03 10:29 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-mavericks-wk2 (772.64 KB, application/zip)
2015-05-03 10:51 PDT, Build Bot
no flags
Archive of layout-test-results from ews102 for mac-mavericks (636.31 KB, application/zip)
2015-05-03 11:02 PDT, Build Bot
no flags
Updated patch. (6.84 KB, patch)
2015-05-04 07:36 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2015-05-03 09:22:44 PDT
Eric Carlson
Comment 2 2015-05-03 09:33:21 PDT
Created attachment 252275 [details] Proposed patch.
WebKit Commit Bot
Comment 3 2015-05-03 09:34:35 PDT
Attachment 252275 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 4 2015-05-03 09:50:25 PDT
Comment on attachment 252275 [details] Proposed patch. Attachment 252275 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6630518024044544 New failing tests: media/track/track-cue-rendering-horizontal.html
Build Bot
Comment 5 2015-05-03 09:50:28 PDT
Created attachment 252276 [details] Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Eric Carlson
Comment 6 2015-05-03 10:29:04 PDT
Created attachment 252278 [details] Updated patch.
Build Bot
Comment 7 2015-05-03 10:29:06 PDT
Comment on attachment 252275 [details] Proposed patch. Attachment 252275 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/6676395254087680 New failing tests: media/track/track-cue-rendering-horizontal.html http/tests/contentextensions/text-track-blocked.html
Build Bot
Comment 8 2015-05-03 10:29:09 PDT
Created attachment 252279 [details] Archive of layout-test-results from ews106 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
WebKit Commit Bot
Comment 9 2015-05-03 10:30:44 PDT
Attachment 252278 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 10 2015-05-03 10:51:21 PDT
Comment on attachment 252278 [details] Updated patch. Attachment 252278 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/4885652998979584 New failing tests: media/track/track-cue-rendering-horizontal.html http/tests/contentextensions/text-track-blocked.html
Build Bot
Comment 11 2015-05-03 10:51:24 PDT
Created attachment 252281 [details] Archive of layout-test-results from ews106 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Build Bot
Comment 12 2015-05-03 11:02:38 PDT
Comment on attachment 252278 [details] Updated patch. Attachment 252278 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/5245111898210304 New failing tests: media/track/track-cue-rendering-horizontal.html
Build Bot
Comment 13 2015-05-03 11:02:41 PDT
Created attachment 252282 [details] Archive of layout-test-results from ews102 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-mavericks Platform: Mac OS X 10.9.5
Eric Carlson
Comment 14 2015-05-04 07:36:09 PDT
Created attachment 252310 [details] Updated patch.
Brent Fulgham
Comment 15 2015-05-04 10:22:46 PDT
Comment on attachment 252310 [details] Updated patch. r=me.
WebKit Commit Bot
Comment 16 2015-05-04 11:27:20 PDT
Comment on attachment 252310 [details] Updated patch. Clearing flags on attachment: 252310 Committed r183751: <http://trac.webkit.org/changeset/183751>
WebKit Commit Bot
Comment 17 2015-05-04 11:27:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.